<resources>
    <string name="app_name">DoItApp</string>

    <string name="sign_in">Sign in</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="no_tasks_yet">No tasks yet</string>

    <string name="error_no_email">Email can not be empty</string>
    <string name="error_no_password">Password can not be empty</string>
    <string name="error_no_title">Title can not be empty</string>

    <string name="warning_no_internet_connection">No internet connection</string>

    <string name="task_priority">Task priority</string>
    <string name="task_deadline">Task deadline</string>
    <string name="task_title">Title</string>
    <string name="task_priority_high">High</string>
    <string name="task_priority_normal">Normal</string>
    <string name="task_priority_low">Low</string>

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>

    <string name="dialog_title_sorting_order">Sorting order</string>
    <string name="dialog_btn_sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="order">Order</string>

    <string name="sort_by_title">title</string>
    <string name="sort_by_deadline">deadline</string>
    <string name="sort_by_priority">priority</string>

    <string name="order_ascending">ASC</string>
    <string name="order_descending">DESC</string>

    <string name="action_logout">Logout</string>
    <string name="action_sort">Sort</string>

</resources>
