<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:text="@string/sort_by"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <RadioGroup
            android:checkedButton="@id/rbTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgSortBy"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
                android:id="@+id/rbTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_by_title"/>
        <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_by_priority"/>
        <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_by_deadline"/>

    </RadioGroup>

    <TextView
            android:text="@string/order"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rgSortBy"
            app:layout_constraintStart_toStartOf="@+id/textView8"/>

    <RadioGroup
            android:checkedButton="@id/rbAscending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgOrder"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp">

        <RadioButton
                android:id="@+id/rbAscending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_ascending"/>
        <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_descending"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>