<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addedittask.AddEditTaskFragment">


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tilTitle"
            android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:hint="@string/task_title"/>
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/tilTitle"
            app:layout_constraintStart_toStartOf="@+id/tilTitle"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:id="@+id/rgPriority">

        <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/task_priority_high"/>
        <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/task_priority_medium"/>
        <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/task_priority_low"/>

    </RadioGroup>

    <TextView
            android:text="@string/task_priority"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/tilTitle"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tilTitle"/>

    <TextView
            android:text="@string/task_deadline"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/tilTitle"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/rgPriority"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:id="@+id/tilDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/tilTime"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilTime"
            app:layout_constraintStart_toEndOf="@+id/tilDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tilDate"
            app:layout_constraintBottom_toBottomOf="@+id/tilDate"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/time"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/pick_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnPickDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnPickTime"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tilDate"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/pick_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnPickTime"
            app:layout_constraintStart_toEndOf="@+id/btnPickDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnPickDate"
            app:layout_constraintBottom_toBottomOf="@+id/btnPickDate"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fabCheck"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>