<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.SignInActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="@string/sign_in"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:id="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail" android:id="@+id/tilPassword">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toTopOf="@+id/btnLogin"
            app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            app:layout_constraintStart_toEndOf="@+id/btnRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>